# CURSOR

./: .env.example  .env.production.example  .env.save  .env.staging.example  .gitattributes  .gitignore  README.md  README.ru.md  README.uz.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  start-dev.sh
ai-analytics-service/: Dockerfile  pyproject.toml  requirements.txt
ai-analytics-service/app/: main.py
ai-analytics-service/tests/: test_no_pinfl.py
backend/: .env.example  .env.local.example  .gitignore  Dockerfile  __init__.py  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt  setup.sh  start.sh  tamor_test.db
backend/alembic/: env.py  helpers.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/data/: breached_passwords.txt
backend/scripts/: dev_bootstrap.sh  entrypoint.sh  inventory_demo_data.py  pre_deploy_check.py  production_bootstrap.sh  purge_demo_data.py  seed_demo_users.py  show_mfa_qr.py  staging_bootstrap.sh  totp_qr_terminal.py
backend/tests/: conftest.py  test_alembic_chain.py  test_auth_flow.py  test_external_api.py  test_group_a_exams.py  test_group_b_messages.py  test_group_c_courses_subjects.py  test_group_d_onboarding.py  test_group_e_branches.py  test_group_f_certificates.py  test_group_g_permissions.py  test_group_h_teacher_assignment.py  test_integrations.py  test_lesson_materials.py  test_llm_service.py  test_nav_permissions.py  test_operator_dashboard.py  test_password_policy.py  test_payment_webhooks.py  test_production.py  test_purge_demo_data.py  test_rls.py  (+4 more)
(+424 files in other folders)
