[project]
name = "tamor-ai-analytics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
